--- a/OSX/Almond/trunk/English.lproj/MainMenu.xib
+++ b/OSX/Almond/trunk/English.lproj/MainMenu.xib
@@ -8,6 +8,7 @@
 		<string key="IBDocument.HIToolboxVersion">353.00</string>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
+			<integer value="1250"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -1689,32 +1690,40 @@
 				<string key="NSClassName">NSView</string>
 			</object>
 			<object class="NSView" id="951866230">
-				<nil key="NSNextResponder"/>
+				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<object class="NSMutableArray" key="NSSubviews">
 					<bool key="EncodedWithXMLCoder">YES</bool>
-					<object class="NSButton" id="907505730">
+					<object class="NSButton" id="736884056">
 						<reference key="NSNextResponder" ref="951866230"/>
 						<int key="NSvFlags">268</int>
-						<string key="NSFrame">{{24, 117}, {106, 23}}</string>
+						<string key="NSFrame">{{18, 117}, {118, 18}}</string>
 						<reference key="NSSuperview" ref="951866230"/>
 						<bool key="NSEnabled">YES</bool>
-						<object class="NSButtonCell" key="NSCell" id="21919994">
+						<object class="NSButtonCell" key="NSCell" id="992433486">
 							<int key="NSCellFlags">-2080244224</int>
-							<int key="NSCellFlags2">134217728</int>
-							<string key="NSContents">Gradient Button</string>
+							<int key="NSCellFlags2">0</int>
+							<string key="NSContents">Rule is enabled</string>
 							<reference key="NSSupport" ref="233381470"/>
-							<reference key="NSControlView" ref="907505730"/>
-							<int key="NSButtonFlags">-2033434369</int>
-							<int key="NSButtonFlags2">162</int>
+							<reference key="NSControlView" ref="736884056"/>
+							<int key="NSButtonFlags">1211912703</int>
+							<int key="NSButtonFlags2">130</int>
+							<object class="NSCustomResource" key="NSNormalImage">
+								<string key="NSClassName">NSImage</string>
+								<string key="NSResourceName">NSSwitch</string>
+							</object>
+							<object class="NSButtonImageSource" key="NSAlternateImage">
+								<string key="NSImageName">NSSwitch</string>
+							</object>
 							<string key="NSAlternateContents"/>
 							<string key="NSKeyEquivalent"/>
-							<int key="NSPeriodicDelay">400</int>
-							<int key="NSPeriodicInterval">75</int>
+							<int key="NSPeriodicDelay">200</int>
+							<int key="NSPeriodicInterval">25</int>
 						</object>
 					</object>
 				</object>
-				<string key="NSFrameSize">{150, 150}</string>
+				<string key="NSFrameSize">{356, 153}</string>
+				<reference key="NSSuperview"/>
 			</object>
 			<object class="NSCollectionViewItem" id="1037982559">
 				<reference key="NSView" ref="951866230"/>
@@ -2709,6 +2718,22 @@
 						<reference key="destination" ref="383446121"/>
 					</object>
 					<int key="connectionID">1259</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBBindingConnection" key="connection">
+						<string key="label">value: representedObject.active</string>
+						<reference key="source" ref="736884056"/>
+						<reference key="destination" ref="1037982559"/>
+						<object class="NSNibBindingConnector" key="connector">
+							<reference key="NSSource" ref="736884056"/>
+							<reference key="NSDestination" ref="1037982559"/>
+							<string key="NSLabel">value: representedObject.active</string>
+							<string key="NSBinding">value</string>
+							<string key="NSKeyPath">representedObject.active</string>
+							<int key="NSNibBindingConnectorVersion">2</int>
+						</object>
+					</object>
+					<int key="connectionID">1271</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -3949,7 +3974,7 @@
 						<reference key="object" ref="951866230"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="907505730"/>
+							<reference ref="736884056"/>
 						</object>
 						<reference key="parent" ref="258037466"/>
 						<string key="objectName">Rule Detail View</string>
@@ -3961,18 +3986,18 @@
 						<string key="objectName">Rule View Item</string>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">1260</int>
-						<reference key="object" ref="907505730"/>
+						<int key="objectID">1266</int>
+						<reference key="object" ref="736884056"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="21919994"/>
+							<reference ref="992433486"/>
 						</object>
 						<reference key="parent" ref="951866230"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">1261</int>
-						<reference key="object" ref="21919994"/>
-						<reference key="parent" ref="907505730"/>
+						<int key="objectID">1267</int>
+						<reference key="object" ref="992433486"/>
+						<reference key="parent" ref="736884056"/>
 					</object>
 				</object>
 			</object>
@@ -4038,12 +4063,14 @@
 					<string>1246.IBPluginDependency</string>
 					<string>1247.IBPluginDependency</string>
 					<string>1248.IBPluginDependency</string>
+					<string>1249.CustomClassName</string>
 					<string>1249.IBPluginDependency</string>
+					<string>1250.CustomClassName</string>
 					<string>1250.IBEditorWindowLastContentRect</string>
 					<string>1250.IBPluginDependency</string>
 					<string>1251.IBPluginDependency</string>
-					<string>1260.IBPluginDependency</string>
-					<string>1261.IBPluginDependency</string>
+					<string>1266.IBPluginDependency</string>
+					<string>1267.IBPluginDependency</string>
 					<string>129.IBPluginDependency</string>
 					<string>129.ImportedFromIB2</string>
 					<string>130.IBEditorWindowLastContentRect</string>
@@ -4282,8 +4309,10 @@
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>RuleCollectionView</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<string>{{105, 679}, {150, 150}}</string>
+					<string>RuleDetailView</string>
+					<string>{{308, 117}, {356, 153}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -4487,7 +4516,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">1261</int>
+			<int key="maxID">1271</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -4566,6 +4595,14 @@
 						<string key="NS.object.0">NSImageView</string>
 					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">FolderDetailView.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">FolderDetailView</string>
+					<string key="superclassName">NSView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBUserSource</string>
 						<string key="minorKey"/>
 					</object>
@@ -4604,6 +4641,26 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBUserSource</string>
 						<string key="minorKey"/>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">RuleCollectionView</string>
+					<string key="superclassName">NSCollectionView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">RuleCollectionView.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">RuleDetailView</string>
+					<string key="superclassName">NSView</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">iconView</string>
+						<string key="NS.object.0">NSImageView</string>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">RuleDetailView.h</string>
 					</object>
 				</object>
 			</object>
